new email added

--- a/contact section.html
+++ b/contact section.html
@@ -10,7 +10,7 @@
    <div class="contact-info">
    	 <div class="card">
        <i class="card-icon fas fa-envelope"></i>
-       <p>lahiru@emil.com</p>
+       <p>lahirueranda@emil.com</p>
    	 </div>
      
       <div class="card">
